--- a/finderror/public/main.html
+++ b/finderror/public/main.html
@@ -7,75 +7,53 @@
     <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="http://apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script>
-        var xmlhttp;
-        function loadXMLDoc(url,cfunc)
-        {
-            if (window.XMLHttpRequest)
-            {// IE7+, Firefox, Chrome, Opera, Safari 代码
-                xmlhttp=new XMLHttpRequest();
-            }
-            else
-            {// IE6, IE5 代码
-                xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
-            }
-            xmlhttp.onreadystatechange=cfunc;
-            xmlhttp.open("GET",url,true);
-            xmlhttp.send();
-        }
         window.onload=function()
         {
-            // 获取当前的版本号
-            function getVersionList()
-            {
-                if (xmlhttp.readyState && xmlhttp.readyState ===4 )
-                {
-                    if (xmlhttp.status === 200)
+            $.ajax( "getVersionList", {dataType:"text"})
+                    .done(function(data)
                     {
                         var textStr ="";
-                        var list = JSON.parse(xmlhttp.responseText);
+                        var list = JSON.parse(data);
                         list.reverse();
                         for(var i=0;i<list.length;i++)
                         {
                             textStr+= "<option>" + list[i] + "</option>"
                         }
-                        document.getElementById("_comboBox").innerHTML=textStr;
-                    }else
+                        $("#_comboBox")[0].innerHTML=textStr;
+                    })
+                    .fail(function(xhr, status)
                     {
-                        alert("服务器连接失败" + SERVERL );
-                    }
-                }
-            }
-            loadXMLDoc( "getVersionList", getVersionList)
+                        console.log("error"+status);
+                        $("#_comboBox")[0].innerHTML="<option>" + "连接失败" +"</option>";
+                    });
         };
-
         function onClickSubmit()
         {
             // AJAX获取http数据
-            function resultHandler()
-            {
-                if (xmlhttp.readyState==4)
-                {
-                    if (xmlhttp.status === 200)
-                    {
-                        document.getElementById("output").innerHTML = xmlhttp.responseText;
-                    }else
-                    {
-                        alert("服务器连接失败" + SERVERL );
-                    }
-                    document.getElementById("submitBtn").className = "btn btn-primary";
-                }
-            }
-            var _version = $("#_comboBox").find("option:selected").text();
-            var _log = document.getElementById("_logInput").value;
+            var _log = $("#_logInput")[0].value;
             if (_log == "")
             {
                 alert("请输入错误日志！");
                 return;
             }
-            document.getElementById("submitBtn").className = "btn disabled";
+            $("#submitBtn")[0].className = "btn disabled";
+            var _version = $("#_comboBox").find("option:selected").text();
+            $.ajax( "getLog",
+                    {
+                        dataType:"text",
+                        version :_version,
+                        errorlog:_log
+                    }).done (function(data)
+            {
+                $("#output").html( xmlhttp.responseText );
 
-            var _url = "getLog?version="+ _version +"&errorlog=" + _log;
-            loadXMLDoc( _url, resultHandler)
+            }).fail(function(xhr, status)
+                    {
+                        $("#output").html( "处理失败 status:" + status );
+                    }).always(function()
+                    {
+                        $("#submitBtn")[0].className = "btn btn-primary";
+                    });
         }
     </script>
     <style>
@@ -95,42 +73,41 @@
     </style>
 </head>
 <body>
-    <div class="container center">
-        <div class="row">
-            <div class="col-xs-12 ">
-                <p>查找错误</p>
-            </div>
+<div class="container center">
+    <div class="row">
+        <div class="col-md-12 ">
+            <p>查找错误</p>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-4 center">选择版本号:</div>
-            <div class="col-xs-4 ">
-                <select class="form-control" id="_comboBox">
-                    <option>正在连接</option>
-                </select>
-            </div>
-            <div class="col-xs-4 ">
-                <button id="submitBtn" type="button" class="btn btn-primary" onclick="onClickSubmit()">提交</button>
-            </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-4 center">选择版本号:</div>
+        <div class="col-xs-4 ">
+            <select class="form-control" id="_comboBox">
+                <option>正在连接</option>
+            </select>
+        </div>
+        <div class="col-xs-4 ">
+            <button id="submitBtn" type="button" class="btn btn-primary" onclick="onClickSubmit()">提交</button>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-4 center">错误日志:</div>
-            <div class="col-xs-8 ">
-                <textarea class="form-control" rows="5" id="_logInput"></textarea>
-            </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-4 center">错误日志:</div>
+        <div class="col-xs-8 ">
+            <textarea class="form-control" rows="5" id="_logInput"></textarea>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-4 center">查找结果:</div>
-            <div class="col-xs-8" id="output">
-            </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-4 center">查找结果:</div>
+        <div class="col-xs-8" id="output">
         </div>
     </div>
-
-    <p class="bottom">power by howe</p>
+</div>
+<p class="bottom">power by howe</p>
 </body>
 </html>
