--- a/finderror/public/main.html
+++ b/finderror/public/main.html
@@ -37,16 +37,20 @@
                 alert("请输入错误日志！");
                 return;
             }
+             _log = btoa(_log);// Base64
             $("#submitBtn")[0].className = "btn disabled";
             var _version = $("#_comboBox").find("option:selected").text();
             $.ajax( "getLog",
                     {
                         dataType:"text",
-                        version :_version,
-                        errorlog:_log
+                        data:{
+                            version :_version,
+                            errorlog:_log
+                        }
+
                     }).done (function(data)
             {
-                $("#output").html( xmlhttp.responseText );
+                $("#output").html( data );
             }).fail(function(xhr, status)
                     {
                         $("#output").html( "处理失败 status:" + status );
